yaml_configs/restic/07-restic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restic
  namespace: restic
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: restic
spec:
  rules:
  - host: backup.nkalsi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: restic
            port:
              number: 9898
